--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.11",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-slot": "^1.0.2",
     "@sanity/client": "^6.15.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.32.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.0",
+    "embla-carousel-react": "^8.0.0",
+    "lucide-react": "^0.350.0",
     "next": "14.1.3",
     "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.32.0",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
