--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "embla-carousel-autoplay": "^8.0.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.350.0",
-    "next": "14.1.3",
+    "next": "^14.2.3",
     "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
