--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/client": "^6.15.2",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.32.0",
+    "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-autoplay": "^8.0.0",
